# Dictatore

./: README.md  pyproject.toml
dictatore/: Instruction.md  __main__.py  cli.py  config.py  daemon.py  doctor.py  events.py  hotkeys.py  main.py  normalize.py  numbers.py  output.py  overlay.py  plugins.py  recognizer.py  recorder.py  state.py
scripts/: download-model.sh
