[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dictatore"
version = "2.0.0"
description = "Offline push-to-talk speech-to-text for Linux"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "vosk",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "pytest-cov",
]

[project.scripts]
dictatore = "dictatore.main:main"

[tool.setuptools.packages.find]
where = ["."]
